--- a/css/myresume.css
+++ b/css/myresume.css
@@ -1,12 +1,12 @@
 .resume_pic {
-    margin: 2vw auto;
-    width: 100vw;
-    height: 50vh;
-    background-color: pink;
+    margin: 10vw auto;
+    width: 60vw;
+    height: auto;
 }
 
 .resume_pic img {
-    width: 60%;
+    width: 100%;
     height: auto;
 
 }
+
